# LUMOS

./: .gitignore  .gitmodules  Laser3dCam.sln  build.sh
SDK/: CMakeLists.txt  SDK.vcxproj  SDK.vcxproj.filters  camera_status.h  laser_3d_cam.cpp  laser_3d_cam.h  laser_3d_cam_dev.h  socket_tcp.cpp
cmd/: CMakeLists.txt  cmd.cpp  cmd.vcxproj  cmd.vcxproj.filters
example/: CMakeLists.txt  camera_status.h  example.cpp  example.vcxproj  example.vcxproj.filters  laser_3d_cam.h
firmware/: CMakeLists.txt  build.sh  camera.cpp  camera.h  camera_mipi.cpp  camera_mipi.h  camera_mvs.cpp  camera_mvs.h  camera_param.h  camera_server.cpp  configuring_ip_info.cfg  easylogging++.cc  encode_cuda.cu  encode_cuda.cuh  main_test_project.cpp  management.cu  management.cuh  merge_hdr.cu  merge_hdr.cuh  projector_ainstec.cpp  projector_ainstec.h  projector_base.cpp  projector_base.h  protocol.h  reboot_server.cpp  scan3d.cpp  scan3d.h  serial_function.cpp  serial_function.h  socket_tcp.cpp  socket_tcp.h  system_config_settings.cpp  system_config_settings.h  version.h  weight.xml
gui/: CMakeLists.txt  PrecisionTest.cpp  about.h  about.ui  about_gui.cpp  about_gui.h  calibrate_function.cpp  calibrate_function.h  calibration_param_gui.cpp  calibration_param_gui.h  calibration_param_gui.ui  camera_capture_gui.cpp  camera_capture_gui.h  camera_capture_gui.ui  camera_gui.cpp  camera_gui.h  camera_gui.ui  dexforce_camera_gui.cpp  dexforce_camera_gui.qrc  file_io_function.cpp  file_io_function.h  gui.aps  gui.vcxproj  gui.vcxproj.filters  main.cpp  myapp.aps  outlier_removal_gui.cpp  outlier_removal_gui.h  outlier_removal_gui.ui  qt.conf  resource.h  save_gui.cpp  save_gui.h  save_gui.ui  select_calibration_board_gui.cpp  select_calibration_board_gui.h  select_calibration_board_gui.ui  settings_file_function.cpp  settings_file_function.h  update_firmware_gui.cpp  (+7 more)
lumos_cpp/: CMakeLists.txt  lcamera.h  lumos_camera.cpp  lumos_camera.h  lumos_cpp.vcxproj  lumos_cpp.vcxproj.filters
lumos_cpp_example/: CMakeLists.txt  cpp_example.cpp  lumos_cpp_example.vcxproj  lumos_cpp_example.vcxproj.filters
test/: test.vcxproj  test.vcxproj.filters  triangulation.cpp  triangulation.h
version/: build.sh
